[gd_scene load_steps=5 format=3 uid="uid://0kh23p3g1gav"]

[ext_resource type="Script" uid="uid://ddrdvhndv8rat" path="res://Scripts/inventory_slot.gd" id="1_pnayc"]
[ext_resource type="Texture2D" uid="uid://cmijemk3ohexe" path="res://Assets/Sprites/Items/messageinbottle.png" id="2_6h8ck"]
[ext_resource type="FontFile" uid="uid://pxs1gb52wxd2" path="res://Assets/Fonts/BOOTERZZ.ttf" id="3_ewbek"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqceb"]

[node name="Inventory_Slot" type="Control"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_pnayc")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.364706, 1, 1, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447432, 0.748213, 0.750392, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(25, 25)
scale = Vector2(3, 3)
texture = ExtResource("2_6h8ck")

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -34.0
offset_right = 12.0
offset_bottom = 17.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_ewbek")
theme_override_font_sizes/font_size = 25
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_yqceb")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -75.0
offset_right = 110.0
offset_bottom = -5.0
color = Color(0.364706, 1, 1, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ewbek")
theme_override_font_sizes/font_size = 25
text = "Name"

[node name="ItemDesc" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -49.0
offset_right = 100.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.31802, 0.31802, 0.31802, 1)
theme_override_fonts/font = ExtResource("3_ewbek")
theme_override_font_sizes/font_size = 17
text = "A great item this is"
autowrap_mode = 2

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = -2.0
grow_horizontal = 2
color = Color(0.364706, 1, 1, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 0
offset_right = 37.0
offset_bottom = 31.0
scale = Vector2(1.08, 0.640924)
theme_override_fonts/font = ExtResource("3_ewbek")
theme_override_font_sizes/font_size = 25
text = "Use"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="UsagePanel/UseButton" to="." method="_on_use_button_pressed"]
